--- a/style3.css
+++ b/style3.css
@@ -425,6 +425,22 @@ textarea {
     transform: rotate(180deg);
 }
 
+
+.service .box,
+.project .box,
+.contact-box {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.6s ease-in-out;
+}
+
+.service .box.visible,
+.project .box.visible,
+.contact-box.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 /* media queries  */
 
 @media (max-width:768px) {
@@ -491,4 +507,30 @@ textarea {
         font-size: 2.5rem;
         width: 30rem;
     }
+}
+
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.home .hero .text1,
+.home .hero .text2 {
+  opacity: 0;
+}
+
+.home .hero .text1.animate {
+  animation: slideInLeft 1s forwards;
+}
+
+.home .hero .text2.animate {
+  animation: slideInLeft 1s forwards;
+  animation-delay: 0.4s;
 }
